...
	return (
		<View style={root} testID="ToGetStarted">
			{showClose && (
				<TouchableOpacity
					style={styles.closeButton}
					onPress={handleHide}
					testID="ToGetStartedClose">
					<XIcon color="gray1" width={16} height={16} />
				</TouchableOpacity>
			)}

			<Headline>
				<Trans
...
