...
							/>
							<Button
								style={[styles.button, styles.skipButton]}
								text={t('skip_intro')}
								size="large"
								variant="secondary"
								testID="SkipIntro"
								onPress={onSkipIntro}
							/>
						</View>
						<SafeAreaInset type="bottom" minPadding={16} />
					</View>
				</View>
...
