...
			{isLast ? (
				<View style={styles.buttonsContainer}>
					<Button
						style={styles.button}
						text={t('new_wallet')}
						size="large"
						testID="NewWallet"
						onPress={onCreate}
					/>

					<Button
						style={styles.button}
						text={t('restore')}
...
