...
			<View style={styles.slide}>
				<TouchableOpacity
					style={styles.qrCode}
					color="white"
					activeOpacity={1}
					accessibilityLabel={uri}
					testID="QRCode"
					onPress={(): void => onCopy(uri, 'unified')}
					onLongPress={onCopyQrCode}>
					<QRCode
						value={uri}
						size={qrSize}
						quietZone={16}
...
				<View style={styles.actions}>
					<Button
						style={styles.actionButton}
						color="white10"
						icon={<PencilIcon width={18} color="brand" />}
						text={t('edit')}
						testID="SpecifyInvoiceButton"
						onPress={onEdit}
					/>
					<Button
						style={styles.actionButton}
						color="white10"
						icon={<CopyIcon width={18} color="brand" />}
						text={t('copy')}
						testID="ReceiveCopyQR"
						onPress={(): void => onCopy(uri, 'unified')}
					/>
					<Button
						style={styles.actionButton}
						color="white10"
						text={t('share')}
...
									width={20}
								/>
							</View>
							<View style={styles.invoiceText}>
								<BodyS
									accessibilityLabel={receiveAddress}
									testID="ReceiveOnchainInvoice">
									{ellipsis(receiveAddress, 25)}
								</BodyS>
								{showTooltip.onchain && (
									<AnimatedView
										style={styles.tooltip}
										color="transparent"
...
							style={styles.carousel}
							data={slides}
							width={dimensions.width}
							height={qrMaxHeight + 64}
							loop={false}
							scrollAnimationDuration={100}
							testID="ReceiveSlider"
							renderItem={({ index }): ReactElement => {
								const Slide = slides[index];
								return <Slide key={index} />;
							}}
							onProgressChange={progress}
							onConfigurePanGesture={(gesture) => {
...
