...
			</View>
		);
	},
	() => true,
);

const Receive = ({
	navigation,
}: ReceiveScreenProps<'Receive'>): ReactElement => {
	const { t } = useTranslation('wallet');
	const dimensions = useWindowDimensions();
	const insets = useSafeAreaInsets();
	const progressValue = useSharedValue(0);
...

	const slides = useMemo((): Slide[] => {
		return [{ slide: Slide1 }, { slide: Slide2 }];
	}, [Slide1, Slide2]);

	return (
		<View style={styles.container} testID="ReceiveScreen">
			<BottomSheetNavigationHeader
				title={t('receive_bitcoin')}
				displayBackButton={false}
			/>

			{loading && (
...
